refactoring for etc integration

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
   
   <servlet>
     <servlet-name>KeyGenerationServiceImpl</servlet-name>
-    <servlet-class>edu.ucdavis.cs.cfgproject.server.KeyGenerationServiceImpl</servlet-class>
+    <servlet-class>edu.ucdavis.cs.cfgproject.server.rpc.KeyGenerationService</servlet-class>
   </servlet>
   
   <servlet-mapping>
