--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	
 	<properties>
 	    <java.version>1.8</java.version>
-		<gwtVersion>2.8.1</gwtVersion>
+		<gwtVersion>2.8.0</gwtVersion>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
@@ -77,6 +77,12 @@
 			<version>1.7.25</version>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
+			<classifier>sources</classifier>
+		</dependency>
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
@@ -120,7 +126,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.8.1</version>
+				<version>${gwtVersion}</version>
 				<executions>
 					<execution>
 						<goals>
