--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>edu.ucdavis.cs</groupId>
 	<artifactId>cfgproject</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.13-SNAPSHOT-debug</version>
+	<version>0.0.14-SNAPSHOT</version>
 	
 	 <!-- disable java doc generation, because source code are not annotated to java 8 doc standards -->
 	<profiles>
@@ -100,23 +100,23 @@
 		<dependency>
 			<groupId>edu.arizona.biosemantics.common</groupId>
 			<artifactId>log</artifactId>
-			<version>0.0.3-SNAPSHOT-debug</version>
+			<version>0.0.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.arizona.biosemantics.common</groupId>
 			<artifactId>log</artifactId>
-			<version>0.0.3-SNAPSHOT-debug</version>
+			<version>0.0.4-SNAPSHOT</version>
 			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>edu.arizona.biosemantics</groupId>
 			<artifactId>gxt</artifactId>
-			<version>0.0.11-SNAPSHOT-debug</version>
+			<version>0.0.12-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>edu.arizona.biosemantics</groupId>
 			<artifactId>gxt</artifactId>
-			<version>0.0.11-SNAPSHOT-debug</version>
+			<version>0.0.12-SNAPSHOT</version>
 			<classifier>sources</classifier>
 		</dependency>
 	</dependencies>
@@ -142,7 +142,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>3.1.0</version>
+				<version>2.4</version>
 				<executions>
 					<execution>
 						<phase>compile</phase>
